# thesis

./: .gitignore  LICENSE  README.md  __main__.py  environment.yaml  pyproject.toml  thesis.ipynb  train.py
experiments/CD_experiment_00withFSA/: config.toml
experiments/CD_experiment_4/: config.toml
experiments/CD_experiment_5/: config.toml
experiments/FD_experiment_00/: config.toml
experiments/FD_experiment_00withFSA/: config.toml
experiments/FD_experiment_02/: config.toml
experiments/FD_experiment_3/: config.toml
experiments/FD_experiment_4/: config.toml
experiments/FD_experiment_5/: config.toml
experiments/baseline_s26/: config.toml  results.json
experiments/baseline_s27/: config.toml  results.json
experiments/baseline_s29/: config.toml  results.json
experiments/baseline_s8/: config.toml  results.json
experiments/cd_baseline/: config.toml  results.json
experiments/cd_baseline_allpreprocessing/: config.toml  results.json
experiments/cd_baseline_augmented/: config.toml  results.json
experiments/cd_baseline_clahe/: config.toml  results.json
experiments/cd_baseline_dc/: config.toml  results.json
experiments/cd_baseline_fsa/: config.toml  results.json
experiments/cd_baseline_otsu/: config.toml  results.json
experiments/cd_baseline_pretrained/: config.toml  results.json
experiments/cnn_clean/: config.toml  results.json
experiments/cnn_fig/: config.toml  results.json
experiments/cnn_fig_s26/: config.toml  results.json
experiments/cnn_fig_s27/: config.toml  (+1 more)
modules/: analysis.py  app_gradio.py  dashboard.py  data.py  demo.py  experiment.py  fsa.py  model.py  preprocessing.py  state_machine.py  trainer.py  utilities.py
pcom/: __init__.py  config.py  dataset.py  model.py  train.py  utils.py
scripts/: balance.py  dedupe.py  detect.py  run_experiments.py
(+88 files in other folders)
