[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "pillow>=11.3.0",
  "questionary>=2.1.1",
  "rich>=14.1.0",
  "scikit-learn>=1.7.2",
  "timm>=1.0.20",
  "toml>=0.10.2",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "tqdm>=4.67.1",
  "transformers>=4.56.2",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
