[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "kaleido>=1.2.0",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "pillow>=12.0.0",
  "plotly>=6.4.0",
  "questionary>=2.1.1",
  "rich>=14.2.0",
  "scikit-learn>=1.7.2",
  "timm>=1.0.22",
  "toml>=0.10.2",
  "torch>=2.9.0",
  "torchvision>=0.24.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
