[project]
name = "thesis"
version = "0.1.0"
description = "PCOS classification task for thesis."
requires-python = ">=3.13"
dependencies = [
  "gradio>=5.49.1",
  "kaleido>=1.2.0",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "pillow>=11.0.0",
  "plotly>=6.4.0",
  "questionary>=2.1.1",
  "rich>=14.2.0",
  "scikit-learn>=1.7.2",
  "timm>=1.0.22",
  "toml>=0.10.2",
  "torch>=2.9.0",
  "torchvision>=0.24.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
]
